[package]
name = "audit_encryption"
version = "1.0.0"
edition = "2024"

[dependencies]
nix = { version = ">=0.29", features = ["user"] }
regex-lite = "0.1.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
